Bug 385071 - Cannot assign query to report if table with the same name exists
Summary: Cannot assign query to report if table with the same name exists
Status: CLOSED FIXED
Alias: None
Product: KEXI
Classification: Applications
Component: Reports and Printouts (other bugs)
Version First Reported In: 3.1.0 Alpha
Platform: Other Linux
: HI normal
Target Milestone: 3.1
Assignee: Jarosław Staniek
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-09-25 22:44 UTC by Jarosław Staniek
Modified: 2017-09-25 23:25 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jarosław Staniek 2017-09-25 22:44:29 UTC
Cannot assign query to report if table with the same name exists. Table is selected as the data source instead.

Reports should keep information about type of data data source. 

The fix should be made backward compatible (i.e. table should be the default type).
Comment 1 Jarosław Staniek 2017-09-25 23:25:02 UTC
Git commit 9f7e374b2867044161156ed6661c22cb15a43b94 by Jaroslaw Staniek.
Committed on 25/09/2017 at 23:20.
Pushed by staniek into branch 'master'.

Reports now keep information about type of data data source (table or query). Detects if needed.

M  +10   -0    src/kexiutils/utils.cpp
M  +6    -0    src/kexiutils/utils.h
M  +1    -9    src/plugins/reports/KexiDBReportDataSource.cpp
M  +1    -3    src/plugins/reports/KexiDBReportDataSource.h
M  +3    -1    src/plugins/reports/kexireportview.cpp
M  +9    -2    src/plugins/reports/kexisourceselector.cpp

https://commits.kde.org/kexi/9f7e374b2867044161156ed6661c22cb15a43b94