Reports now keep information about type of data data source (table or query). Detects if needed.

BUG:385071